# MallocWorld

./: .gitignore  CMakeLists.txt  main.c  main.cpp
documentation/: Convention de codage.docx  INSTALL.txt  ~$nvention de codage.docx
ext/sdl/cmake/: FindSDL2.cmake  FindSDL2_image.cmake  FindSDL2_mixer.cmake  FindSDL2_ttf.cmake
ext/sdl/include/: SDL.h  SDL_assert.h  SDL_atomic.h  SDL_audio.h  SDL_blendmode.h  SDL_clipboard.h  SDL_config.h  SDL_cpuinfo.h  SDL_error.h  SDL_events.h  SDL_filesystem.h  SDL_gamecontroller.h  SDL_gesture.h  SDL_haptic.h  SDL_hints.h  SDL_joystick.h  SDL_keyboard.h  SDL_keycode.h  SDL_locale.h  SDL_log.h  SDL_main.h  SDL_messagebox.h  SDL_metal.h  SDL_misc.h  SDL_mouse.h  SDL_mutex.h  SDL_pixels.h  SDL_power.h  SDL_quit.h  SDL_rect.h  SDL_render.h  SDL_revision.h  SDL_rwops.h  SDL_scancode.h  SDL_sensor.h  SDL_stdinc.h  SDL_surface.h  SDL_system.h  SDL_syswm.h  SDL_test.h  (+19 more)
header/: global.h  monster.h  respawn.h  world.h  zone.h
header/map/: forest.h  village.h
resources/: craft.csv  inventories.csv  monsters.csv
resources/save/: save.txt
sources/: main.c
sources/header/: game.h  global.h  inventory.h  monster.h  player.h  position.h  restaure.h  storage.h  zone.h
sources/header/action/: crafting.h  fight.h  mining.h  moving.h
sources/header/agent/: monster.h  player.h  pnj.h
sources/header/game/: game.h  restore.h  save.h
sources/header/inventory/: inventory.h  stack.h  storage.h
sources/header/world/: position.h  respawn.h  world.h  zone.h
sources/header/world/map/: forest.h  village.h
sources/src/: game.c  global.c  inventory.c  monster.c  player.c  position.c  restaure.c  stack.c  storage.c  world.c  zone.c
sources/src/action/: crafting.c  fight.c  mining.c  moving.c
sources/src/agents/: monster.c  player.c  pnj.c
sources/src/game/: game.c  restore.c  save.c
sources/src/inventory/: inventory.c  stack.c  storage.c
sources/src/map/: forest.c  village.c
sources/src/world/: position.c  respawn.c  world.c  zone.c
sources/src/world/map/: forest.c  village.c
src/: global.c  inventory.c  monster.c  respawn.c  world.c  zone.c
src/map/: forest.c  village.c
